Universal grep - a Unicode-aware grep utility

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,17 @@
-man1_MANS      = man/ugrep.1
+SUBDIRS = src
 
-bin_PROGRAMS   = ugrep
-ugrep_CPPFLAGS = -DPLATFORM=\"$(PLATFORM)\"
-ugrep_SOURCES  = ugrep.cpp
-ugrep_LDADD    = -lreflex
+man1_MANS = man/ugrep.1
+
+EXTRA_DIST = README.md LICENSE.txt CONTRIBUTING.md CODE_OF_CONDUCT.md
+
+install-data-hook:
+		@echo " ______________________________________________________ "; \
+		 echo "|                                                      |"; \
+		 echo "| You have successfully built and installed ugrep.     |"; \
+		 echo "|                                                      |"; \
+		 echo "| You can use the ugrep command to search files.       |"; \
+		 echo "|                                                      |"; \
+		 echo "| Thanks for using ugrep.                              |"; \
+		 echo "|                                                      |"; \
+		 echo "|             https://github.com/Genivia/ugrep         |"; \
+		 echo "|______________________________________________________|";
