--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,11 @@ AC_COPYRIGHT([Copyright (C) 2019-2019 Robert van Engelen, Genivia Inc.])
 
 AC_CONFIG_MACRO_DIR([m4])
 
+AC_CHECK_LIB(reflex, REFLEX_DBGOUT_,
+    [],
+    [echo 'ugrep requires the RE/flex library: https://github.com/Genivia/RE-flex'],
+    [])
+
 AC_TYPE_SIZE_T
 
 AC_PROG_CXX
