Added ugrep options --include, --include-dir, --exclude, --exclude-dir

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS   = ugrep
 ugrep_CPPFLAGS = -DPLATFORM=\"$(PLATFORM)\"
-ugrep_SOURCES  = ugrep.cpp
+ugrep_SOURCES  = ugrep.cpp wildmat.cpp
 ugrep_LDADD    = -lreflex
