--- a/Makefile.in
+++ b/Makefile.in
@@ -735,7 +735,7 @@ distcleancheck: distclean
 	       exit 1; } >&2
 check-am: all-am
 check: check-recursive
-all-am: Makefile $(MANS) config.h
+all-am: Makefile $(MANS) config.h all-local
 installdirs: installdirs-recursive
 installdirs-am:
 	for dir in "$(DESTDIR)$(man1dir)"; do \
@@ -846,7 +846,7 @@ uninstall-man: uninstall-man1
 .MAKE: $(am__recursive_targets) all install-am install-data-am \
 	install-strip
 
-.PHONY: $(am__recursive_targets) CTAGS GTAGS TAGS all all-am \
+.PHONY: $(am__recursive_targets) CTAGS GTAGS TAGS all all-am all-local \
 	am--refresh check check-am clean clean-cscope clean-generic \
 	cscope cscopelist-am ctags ctags-am dist dist-all dist-bzip2 \
 	dist-gzip dist-lzip dist-shar dist-tarZ dist-xz dist-zip \
@@ -865,6 +865,15 @@ uninstall-man: uninstall-man1
 
 .PRECIOUS: Makefile
 
+
+all-local:	cp2bin
+
+.PHONY:		cp2bin
+
+# to copy the ugrep binary to bin
+cp2bin:		$(abs_top_builddir)/src/ugrep
+		-mkdir -p $(top_builddir)/bin
+		-cp -f $< $(top_builddir)/bin
 
 install-data-hook:
 		@echo " ______________________________________________________ "; \
