--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(ugrep,1.0)
+AC_INIT(ugrep,1.1.5)
 AM_INIT_AUTOMAKE([foreign])
 AM_CONFIG_HEADER(config.h)
 AC_COPYRIGHT([Copyright (C) 2019-2019 Robert van Engelen, Genivia Inc.])
@@ -7,7 +7,7 @@ AC_CONFIG_MACRO_DIR([m4])
 
 AC_CHECK_LIB(reflex, REFLEX_DBGOUT_,
     [],
-    [echo 'ugrep requires the RE/flex library: https://github.com/Genivia/RE-flex'],
+    [echo 'ugrep requires RE/flex 1.2.1 or greater: https://github.com/Genivia/RE-flex'],
     [])
 
 AC_TYPE_SIZE_T
@@ -18,8 +18,12 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 
 AC_CANONICAL_HOST
+
 PLATFORM=${host}
 AC_SUBST(PLATFORM)
+
+GREP_PATH=${datadir}/ugrep
+AC_SUBST(GREP_PATH)
 
 AC_LANG([C++])
 AX_CXX_COMPILE_STDCXX_11([noext], [mandatory])
