--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,8 @@ man1_MANS = man/ugrep.1
 EXTRA_DIST = README.md LICENSE.txt CONTRIBUTING.md CODE_OF_CONDUCT.md
 
 install-data-hook:
+		(mkdir -p $(datadir)/ugrep; \
+		 cp -rf patterns $(datadir)/ugrep/)
 		@echo " ______________________________________________________ "; \
 		 echo "|                                                      |"; \
 		 echo "| You have successfully built and installed ugrep.     |"; \
