--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS   = ugrep
-ugrep_CPPFLAGS = -DPLATFORM=\"$(PLATFORM)\"
+ugrep_CPPFLAGS = -DPLATFORM=\"$(PLATFORM)\" -DGREP_PATH=\"$(GREP_PATH)\"
 ugrep_SOURCES  = ugrep.cpp wildmat.cpp
 ugrep_LDADD    = -lreflex
