--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -103,7 +103,7 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_ugrep_OBJECTS = ugrep-ugrep.$(OBJEXT) ugrep-wildmat.$(OBJEXT)
+am_ugrep_OBJECTS = ugrep-ugrep.$(OBJEXT) ugrep-glob.$(OBJEXT)
 ugrep_OBJECTS = $(am_ugrep_OBJECTS)
 ugrep_DEPENDENCIES =
 AM_V_P = $(am__v_P_@AM_V@)
@@ -121,8 +121,8 @@ am__v_at_1 =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__maybe_remake_depfiles = depfiles
-am__depfiles_remade = ./$(DEPDIR)/ugrep-ugrep.Po \
-	./$(DEPDIR)/ugrep-wildmat.Po
+am__depfiles_remade = ./$(DEPDIR)/ugrep-glob.Po \
+	./$(DEPDIR)/ugrep-ugrep.Po
 am__mv = mv -f
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -276,7 +276,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ugrep_CPPFLAGS = -DPLATFORM=\"$(PLATFORM)\" -DGREP_PATH=\"$(GREP_PATH)\"
-ugrep_SOURCES = ugrep.cpp wildmat.cpp
+ugrep_SOURCES = ugrep.cpp glob.cpp
 ugrep_LDADD = -lreflex
 all: all-am
 
@@ -364,8 +364,8 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ugrep-glob.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ugrep-ugrep.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ugrep-wildmat.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -401,19 +401,19 @@ ugrep-ugrep.obj: ugrep.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ugrep-ugrep.obj `if test -f 'ugrep.cpp'; then $(CYGPATH_W) 'ugrep.cpp'; else $(CYGPATH_W) '$(srcdir)/ugrep.cpp'; fi`
 
-ugrep-wildmat.o: wildmat.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ugrep-wildmat.o -MD -MP -MF $(DEPDIR)/ugrep-wildmat.Tpo -c -o ugrep-wildmat.o `test -f 'wildmat.cpp' || echo '$(srcdir)/'`wildmat.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/ugrep-wildmat.Tpo $(DEPDIR)/ugrep-wildmat.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='wildmat.cpp' object='ugrep-wildmat.o' libtool=no @AMDEPBACKSLASH@
+ugrep-glob.o: glob.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ugrep-glob.o -MD -MP -MF $(DEPDIR)/ugrep-glob.Tpo -c -o ugrep-glob.o `test -f 'glob.cpp' || echo '$(srcdir)/'`glob.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/ugrep-glob.Tpo $(DEPDIR)/ugrep-glob.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='glob.cpp' object='ugrep-glob.o' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ugrep-wildmat.o `test -f 'wildmat.cpp' || echo '$(srcdir)/'`wildmat.cpp
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ugrep-glob.o `test -f 'glob.cpp' || echo '$(srcdir)/'`glob.cpp
 
-ugrep-wildmat.obj: wildmat.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ugrep-wildmat.obj -MD -MP -MF $(DEPDIR)/ugrep-wildmat.Tpo -c -o ugrep-wildmat.obj `if test -f 'wildmat.cpp'; then $(CYGPATH_W) 'wildmat.cpp'; else $(CYGPATH_W) '$(srcdir)/wildmat.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/ugrep-wildmat.Tpo $(DEPDIR)/ugrep-wildmat.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='wildmat.cpp' object='ugrep-wildmat.obj' libtool=no @AMDEPBACKSLASH@
+ugrep-glob.obj: glob.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ugrep-glob.obj -MD -MP -MF $(DEPDIR)/ugrep-glob.Tpo -c -o ugrep-glob.obj `if test -f 'glob.cpp'; then $(CYGPATH_W) 'glob.cpp'; else $(CYGPATH_W) '$(srcdir)/glob.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/ugrep-glob.Tpo $(DEPDIR)/ugrep-glob.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='glob.cpp' object='ugrep-glob.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ugrep-wildmat.obj `if test -f 'wildmat.cpp'; then $(CYGPATH_W) 'wildmat.cpp'; else $(CYGPATH_W) '$(srcdir)/wildmat.cpp'; fi`
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ugrep_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ugrep-glob.obj `if test -f 'glob.cpp'; then $(CYGPATH_W) 'glob.cpp'; else $(CYGPATH_W) '$(srcdir)/glob.cpp'; fi`
 
 ID: $(am__tagged_files)
 	$(am__define_uniq_tagged_files); mkid -fID $$unique
@@ -542,8 +542,8 @@ clean: clean-am
 clean-am: clean-binPROGRAMS clean-generic mostlyclean-am
 
 distclean: distclean-am
-		-rm -f ./$(DEPDIR)/ugrep-ugrep.Po
-	-rm -f ./$(DEPDIR)/ugrep-wildmat.Po
+		-rm -f ./$(DEPDIR)/ugrep-glob.Po
+	-rm -f ./$(DEPDIR)/ugrep-ugrep.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -589,8 +589,8 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-		-rm -f ./$(DEPDIR)/ugrep-ugrep.Po
-	-rm -f ./$(DEPDIR)/ugrep-wildmat.Po
+		-rm -f ./$(DEPDIR)/ugrep-glob.Po
+	-rm -f ./$(DEPDIR)/ugrep-ugrep.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
