--- a/config.h.in
+++ b/config.h.in
@@ -9,6 +9,9 @@
 /* Define to 1 if you have the `reflex' library (-lreflex). */
 #undef HAVE_LIBREFLEX
 
+/* Define to 1 if you have `z' library (-lz) */
+#undef HAVE_LIBZ
+
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
