--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(ugrep,1.1.5)
+AC_INIT(ugrep,1.2.1)
 AM_INIT_AUTOMAKE([foreign])
 AM_CONFIG_HEADER(config.h)
 AC_COPYRIGHT([Copyright (C) 2019-2019 Robert van Engelen, Genivia Inc.])
@@ -7,8 +7,10 @@ AC_CONFIG_MACRO_DIR([m4])
 
 AC_CHECK_LIB(reflex, REFLEX_DBGOUT_,
     [],
-    [echo 'ugrep requires RE/flex 1.2.1 or greater: https://github.com/Genivia/RE-flex'],
+    [echo 'ugrep requires RE/flex 1.2.5 or greater: https://github.com/Genivia/RE-flex'],
     [])
+
+AX_CHECK_ZLIB([], [echo 'zlib not found: option -z, --decompress not available'])
 
 AC_TYPE_SIZE_T
 
