--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,4 @@
 bin_PROGRAMS   = ugrep
-ugrep_CPPFLAGS = -DPLATFORM=\"$(PLATFORM)\" -DGREP_PATH=\"$(GREP_PATH)\"
+ugrep_CPPFLAGS = $(PTHREAD_CFLAGS) -DPLATFORM=\"$(PLATFORM)\" -DGREP_PATH=\"$(GREP_PATH)\"
 ugrep_SOURCES  = ugrep.cpp glob.cpp
+ugrep_LDADD    = $(PTHREAD_LIBS)
