--- a/Makefile.in
+++ b/Makefile.in
@@ -286,6 +286,8 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PLATFORM = @PLATFORM@
 RANLIB = @RANLIB@
+REFLEX_CFLAGS = @REFLEX_CFLAGS@
+REFLEX_LIBS = @REFLEX_LIBS@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
